Fix Heading and Subheading spacing issue

--- a/css/main.css
+++ b/css/main.css
@@ -74,8 +74,13 @@ h1, h2, h3, h4, h5, h6 {
 	color: var(--heading-color);
 }
 
-p, a, i {
+p, a, i, ul {
 	color: var(--text-color);
+}
+
+ul {
+	list-style-type: none;
+	padding: 0;
 }
 
 #main_content {
@@ -86,6 +91,7 @@ p, a, i {
 
 h2 {
 	text-align: center;
+	margin: 0;
 }
 
 .content {
